modified: pom.xml
deleted packages: weld-junit4
new packages: arquillian-bom, arquillian-junit-container, arquillian-payara-server-embedded, slf4j-simple